# SensorWorkspace

./: .gitignore  CMakeLists.txt  README.md  build.sh
Camera/: CMakeLists.txt
Camera/include/: VisualOdom.h  common.h
Camera/src/: VisualOdom.cpp  common.cpp  gainsensordata.cpp  line.cpp  main.cpp  start_node.cpp
Camera/test/: CMakeLists.txt  double_camera_test.cpp  main.cpp
common/Camera/config/: camera.yaml  camera_for_test.yaml
common/Camera/config/kitti_odom/: cam03.yaml  cam04-12.yaml
common/Camera/include/: common.h
include/: common.h
src/: main.cpp
test/: CMakeLists.txt  double_camera_test.cpp
